--- a/app/src/main/res/layout/item_user_book.xml
+++ b/app/src/main/res/layout/item_user_book.xml
@@ -26,9 +26,12 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/constraint_iuserbook_container"
+        style="@style/RippleEffect"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:padding="16dp"
+        android:onClick="@{onClickItem}"
+        android:onLongClick="@{onLongClickItem}"
         android:background="@drawable/background_radius"
         android:elevation="1dp">
 
