--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="album_corner_radius">8dp</dimen>
+    <dimen name="comment_corner_radius">8dp</dimen>
 </resources>
