--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -123,6 +123,14 @@
         <item name="android:paddingBottom">24dp</item>
     </style>
 
+    <style name="CommentContent" parent="android:TextAppearance">
+        <item name="android:textSize">14sp</item>
+        <item name="android:lineSpacingExtra">4sp</item>
+        <item name="readMoreMaxLine">6</item>
+        <item name="readMoreColor">@color/black</item>
+        <item name="readMoreText">...</item>
+    </style>
+
     <style name="Body">
         <item name="android:textColor">@color/primaryTextColor</item>
         <item name="android:textSize">12sp</item>
