--- a/app/src/main/res/layout/item_user_book.xml
+++ b/app/src/main/res/layout/item_user_book.xml
@@ -36,7 +36,7 @@
         android:elevation="1dp">
 
         <com.google.android.material.imageview.ShapeableImageView
-            android:id="@+id/img_iuserbook"
+            android:id="@+id/img_ihome"
             android:layout_width="96dp"
             android:layout_height="96dp"
             android:background="@color/black"
@@ -45,13 +45,13 @@
             bind:imageBook="@{book.image}" />
 
         <TextView
-            android:id="@+id/text_iuserbook_title"
+            android:id="@+id/text_ihome_title"
             style="@style/BookTitleSmall"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/img_iuserbook"
+            app:layout_constraintTop_toBottomOf="@id/img_ihome"
             bind:searchText="@{book.title}"
             tools:text="달을 닮은 너에게" />
 
