--- a/app/src/main/res/layout/item_review.xml
+++ b/app/src/main/res/layout/item_review.xml
@@ -6,7 +6,7 @@
     <data>
         <variable
             name="review"
-            type="com.example.mylibrary.data.entity.firebase.book.Review" />
+            type="com.example.mylibrary.data.entity.firebase.Review" />
 
         <variable
             name="onClickItem"
