feat: delete review

--- a/app/src/main/res/layout/item_review.xml
+++ b/app/src/main/res/layout/item_review.xml
@@ -33,6 +33,7 @@
 
         <ImageView
             android:id="@+id/img_ireview_more"
+            style="@style/RippleEffect"
             android:padding="8dp"
             android:layout_width="32dp"
             android:layout_height="32dp"
