--- a/app/src/main/res/layout/fragment_setting.xml
+++ b/app/src/main/res/layout/fragment_setting.xml
@@ -38,7 +38,7 @@
                     app:layout_collapseMode="parallax" />
 
                 <ImageView
-                    android:id="@+id/image_setting_back"
+                    android:id="@+id/img_setting_back"
                     style="@style/BackArrow" />
 
                 <TextView
@@ -107,7 +107,7 @@
                 app:layout_constraintTop_toBottomOf="@id/text_setting_email" />
 
             <ImageView
-                android:id="@+id/image_setting_username"
+                android:id="@+id/img_setting_username"
                 android:layout_width="12dp"
                 android:layout_height="12dp"
                 android:src="@drawable/ic_arrow_right"
